--- a/bind_bank_addnew.html
+++ b/bind_bank_addnew.html
@@ -8,9 +8,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="icon" type="image/png" href="i/favicon.png">
-    <link rel="stylesheet" href="css/sm.min.css">
-    <link rel="stylesheet" href="css/sm-extend.min.css">
+    <link rel="icon" type="image/png" href="i/favicon.png"><link rel="stylesheet" href="css/light7.css">
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/mobile.css">
     <!--<link rel="stylesheet" href="css/animate.css">-->
@@ -49,7 +47,7 @@
                 <div class="item-content ">
                     <div class="item-inner">
                         <div class="item-input">
-                            <input type="number" placeholder="" >
+                            <input type="number" placeholder="Bank card number" style="color: #ffa670;">
                         </div>
                     </div>
                 </div>
@@ -58,72 +56,17 @@
                 <div class="item-content ">
                     <div class="item-inner">
                         <div class="item-input">
-                            <select name="bank" id="usertag-form-cashoutbank_bank" class="user-tag-form-select">
-                                <option value="">---选择银行名称---</option>
-                                <option value="工商银行">工商银行</option>
-                                <option value="农业银行">农业银行</option>
-                                <option value="建设银行">建设银行</option>
-                                <option value="招商银行">招商银行</option>
-                                <option value="中国银行">中国银行</option>
-                                <option value="平安银行">平安银行</option>
-                                <option value="兴业银行">兴业银行</option>
-                                <option value="民生银行">民生银行</option>
-                                <option value="深圳发展银行">深圳发展银行</option>
-                                <option value="广东发展银行">广东发展银行</option>
-                                <option value="中国邮政">中国邮政</option>
-                                <option value="浦发银行">浦发银行</option>
-                                <option value="交通银行">交通银行</option>
-                                <option value="中信银行">中信银行</option>
-                                <option value="华夏银行">华夏银行</option>
+                            <select style="color: #ffa670;" name="bank" id="usertag-form-cashoutbank_bank" class="user-tag-form-select">
+                                <option value="">choose bank</option>
+                                <option value="MAYBANK">MAYBANK</option>
+                                <option value="PUBLIC BANK">PUBLIC BANK</option>
                             </select>
                         </div>
                     </div>
                 </div>
                 <!-- 选择银行 -->
-                <div class="item-title row-tit"><span data-i18n-text="typeOfCard"></span> <span class="c-red">*</span></div>
-                <div class="item-content ">
-                    <div class="item-inner">
-                        <div class="item-input">
-                            <div id="wwctrl_usertag-form-cashoutbank_accountType" class="wwctrl">
-                                <select name="accountType" id="usertag-form-cashoutbank_accountType" class="user-tag-form-select">
-                                    <option value="">---卡性质---</option>
-                                    <option value="借记卡">借记卡</option>
-                                    <option value="信用卡">信用卡</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
                 <!--<span class="input-tip">必须使用以真实姓名为开户名的银行卡进行认证</span>-->
-                <!-- 开户银行所在地 -->
-                <div class="item-title row-tit"><span data-i18n-text="locationOfBank"></span> <span class="c-red">*</span></div>
-                <div class="item-content ">
-                    <div class="item-inner">
-                        <div class="item-input">
-                            <select name=""  class="user-tag-form-select">
-                                <option value="">---省---</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-                <div class="item-content ">
-                    <div class="item-inner">
-                        <div class="item-input">
-                            <select name=""  class="user-tag-form-select">
-                                <option value="">---市---</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-                <div class="item-content ">
-                    <div class="item-inner">
-                        <div class="item-input">
-                            <select name=""  class="user-tag-form-select">
-                                <option value="">---区---</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
 
 
             </div>
@@ -136,18 +79,11 @@
     </div>
 
 </div>
-
-<script type='text/javascript' src='js/zepto.min.js' charset='utf-8'></script>
-
-<script src="js/win8-mobile.js?version=0.17" type="text/javascript"></script>
-
 <script type='text/javascript' src='js/jquery2.1.4.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='js/sm.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='js/sm-extend.min.js' charset='utf-8'></script>
+<script src="js/win8-mobile.js?version=0.17" type="text/javascript"></script>
+<script type='text/javascript' src='js/light7.js' charset='utf-8'></script>
 <script src="js/iconfont-symbol-container.js"></script>
-
 <script type='text/javascript' src='js/swiper.min.js' charset='utf-8'></script>
-
 <script src="js/plugins/i18n/jquery.i18n.properties.js"></script>
 <script src="js/plugins/i18n/language.js"></script>
 </body>
