--- a/game-real.html
+++ b/game-real.html
@@ -8,9 +8,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="icon" type="image/png" href="i/favicon.png">
-    <link rel="stylesheet" href="css/sm.min.css">
-    <link rel="stylesheet" href="css/sm-extend.min.css">
+    <link rel="icon" type="image/png" href="i/favicon.png"><link rel="stylesheet" href="css/light7.css">
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/mobile.css">
     <!--<link rel="stylesheet" href="css/animate.css">-->
@@ -49,24 +47,20 @@
         <!--/. 登录前 -->
         <nav class="bar bar-tab">
             <a class="tab-item external " href="index.html">
-                <span class="icon iconfont icon-shouye"></span>
-                <span class="tab-label" data-i18n-text="navHome">首页</span>
+                <span class="icon iconfont icon-shouye1"></span>
+                <span class="tab-label" data-i18n-text="navHome">home</span>
             </a>
-            <a class="tab-item external active" href="game.html">
-                <span class="icon iconfont icon-youxi"></span>
-                <span class="tab-label" data-i18n-text="navGames">游戏中心</span>
+            <a class="tab-item external" href="prefer.html">
+                <span class="icon iconfont icon-youhui1"></span>
+                <span class="tab-label" data-i18n-text="navpromo">promo</span>
             </a>
             <a class="tab-item external" href="#">
-                <span class="icon iconfont icon-kefu2" ></span>
-                <span class="tab-label" data-i18n-text="navService">客服</span>
+                <span class="icon iconfont icon-chat" ></span>
+                <span class="tab-label" data-i18n-text="navliveChat">live chat</span>
             </a>
-            <a class="tab-item external" href="onlinepaystart.html">
-                <span class="icon iconfont icon-chongzhi"></span>
-                <span class="tab-label" data-i18n-text="navRecharge">充值</span>
-            </a>
-            <a class="tab-item external" href="user-center.html">
-                <span class="icon iconfont icon-members"></span>
-                <span class="tab-label" data-i18n-text="navUserCenter">会员中心</span>
+            <a class="tab-item external " href="user-center.html">
+                <span class="icon iconfont icon-wodeA"></span>
+                <span class="tab-label" data-i18n-text="navProfile">profile</span>
             </a>
         </nav>
         <div class="content">
@@ -85,7 +79,7 @@
                     <a href="game-real.html" class="active button"><span data-i18n-text="real">真人</span></a>
                     <a href="game-fish.html" class=" button"><span data-i18n-text="fish">捕鱼</span></a>
                     <a href="game-sport.html" class=" button"><span data-i18n-text="sport">体育</span></a>
-                    <a href="game-lott.html" class=" button"><span data-i18n-text="lottery">彩票</span></a>
+                    <a href="game-lott.html" class=" button"><span data-i18n-text="Lottery">彩票</span></a>
                     <a href="game-chess.html" class=" button"><span data-i18n-text="poker">棋牌</span></a>
                 </div>
             </div>
@@ -161,17 +155,11 @@
     </div>
     <!-- / 左侧栏 -->
 </div>
-<script type='text/javascript' src='js/zepto.min.js' charset='utf-8'></script>
-
-<script src="js/win8-mobile.js?version=0.17" type="text/javascript"></script>
-
 <script type='text/javascript' src='js/jquery2.1.4.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='js/sm.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='js/sm-extend.min.js' charset='utf-8'></script>
+<script src="js/win8-mobile.js?version=0.17" type="text/javascript"></script>
+<script type='text/javascript' src='js/light7.js' charset='utf-8'></script>
 <script src="js/iconfont-symbol-container.js"></script>
-
 <script type='text/javascript' src='js/swiper.min.js' charset='utf-8'></script>
-
 <script src="js/plugins/i18n/jquery.i18n.properties.js"></script>
 <script src="js/plugins/i18n/language.js"></script>
 
