--- a/reset-pwd.html
+++ b/reset-pwd.html
@@ -8,9 +8,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="icon" type="image/png" href="i/favicon.png">
-    <link rel="stylesheet" href="css/sm.min.css">
-    <link rel="stylesheet" href="css/sm-extend.min.css">
+    <link rel="icon" type="image/png" href="i/favicon.png"><link rel="stylesheet" href="css/light7.css">
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/mobile.css">
     <!--<link rel="stylesheet" href="css/animate.css">-->
@@ -33,18 +31,18 @@
                     <div class="row">
                         <div class="row">
                             <input class="login-input input-pwd" name="password" maxlength="10" id="password" type="password"
-                                   placeholder="长度须在8~10之间"/>
+                                   placeholder="Length must be between 8~10"/>
                         </div>
                     </div>
 
                     <div class="row ">
                         <div class="row">
                             <input class="login-input input-pwd" name="password" maxlength="10" id="repassword" type="password"
-                                   placeholder="再次输入密码"/>
+                                   placeholder="repeat password"/>
                         </div>
                     </div>
 
-                    <button class="submit-btn" type="button" onclick="window.location.href='state-succ.html';">确认</button>
+                    <button class="submit-btn" type="button" onclick="window.location.href='state-succ.html';">submit</button>
 
                 </form>
 
@@ -56,21 +54,13 @@
 
 
 </div>
-
-<script type='text/javascript' src='js/zepto.min.js' charset='utf-8'></script>
-
-<script src="js/win8-mobile.js?version=0.17" type="text/javascript"></script>
-
 <script type='text/javascript' src='js/jquery2.1.4.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='js/sm.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='js/sm-extend.min.js' charset='utf-8'></script>
+<script src="js/win8-mobile.js?version=0.17" type="text/javascript"></script>
+<script type='text/javascript' src='js/light7.js' charset='utf-8'></script>
 <script src="js/iconfont-symbol-container.js"></script>
-
 <script type='text/javascript' src='js/swiper.min.js' charset='utf-8'></script>
-
 <script src="js/plugins/i18n/jquery.i18n.properties.js"></script>
 <script src="js/plugins/i18n/language.js"></script>
-
 
 
 </body>
