--- a/change_password_withdrawal.html
+++ b/change_password_withdrawal.html
@@ -1,38 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>赢8娱乐</title>
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="icon" type="image/png" href="i/favicon.png">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
-    <link rel="stylesheet" href="css/font-awesome.css">
-    <!-- build:mincss css/win8-style-mobile.min.css -->
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_425853_3w2y99r15ihhbyb9.css">
-    <link rel="stylesheet" href="css/mobile.css">
-    <!-- endbuild -->
-
-
-
-</head>
-
+    <!DOCTYPE html>
+    <html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title class="i18n" data-i18n-text='title'></title>
+        <meta id="i18n_pagename" content="index-common">
+        <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black">
+        <link rel="icon" type="image/png" href="i/favicon.png"><link rel="stylesheet" href="css/light7.css">
+        <link rel="stylesheet" href="css/font-awesome.css">
+        <link rel="stylesheet" href="css/mobile.css">
+        <!--<link rel="stylesheet" href="css/animate.css">-->
+    </head>
 <body>
 <div class="page-group">
     <div class="page page-current">
         <header class="bar bar-nav">
             <a class="button button-link button-nav pull-left back" href="user-center.html" data-transition='slide-out'>                 <span class="iconfont icon-fanhui c-white"> </span></a>
-
-            <h1 class="title">密码管理</h1>
+            <!--<a class="icon icon-menu pull-left open-panel c-white" data-panel=".panel-left"></a>-->
+            <h1 class="title" data-i18n-text="resetPassword"></h1>
             <a href="javascript:void(0)" class="icon icon-service pull-right c-white"></a>
         </header>
 
+
         <div class="content">
             <div class="content-block">
-                <p class="buttons-row"><a href="change_password.html" class="button">登录密码</a><a href="change_password_withdrawal.html" class="button active">提款密码</a></p>
+                <p class="buttons-row"><a href="change_password.html" class="button" data-i18n-text="tabLoginPassword">Login password</a><a href="change_password_withdrawal.html" class="button active" data-i18n-text="tabWithdrawPassword">Withdraw password</a></p>
             </div>
 
             <!-- 列表 -->
@@ -43,7 +40,7 @@
                         <div class="item-content">
                             <div class="item-inner">
                                 <div class="item-input">
-                                    <input type="password" placeholder="旧登录密码" >
+                                    <input type="password" data-i18n-placeholder="oldWithdrawPassword" >
                                 </div>
                             </div>
                         </div>
@@ -52,7 +49,7 @@
                         <div class="item-content">
                             <div class="item-inner">
                                 <div class="item-input">
-                                    <input type="password" placeholder="新登录密码" >
+                                    <input type="password" data-i18n-placeholder="newWithdrawPassword" >
                                 </div>
                             </div>
                         </div>
@@ -61,7 +58,7 @@
                         <div class="item-content">
                             <div class="item-inner">
                                 <div class="item-input">
-                                    <input type="password" placeholder="重复新登录密码" >
+                                    <input type="password" data-i18n-placeholder="repeatWithdrawPassword" >
                                 </div>
                             </div>
                         </div>
@@ -73,19 +70,21 @@
             <!-- /.列表 -->
 
             <div class="content-block">
-                <p><a href="#" class="button button-big button-round button-fill button-warning">提交 </a></p>
+                <p><a href="#" class="button button-big button-round button-fill button-warning" data-i18n-text="btnSubmit">提交 </a></p>
             </div>
 
         </div><!-- /. content -->
     </div>
 
 </div>
+<script type='text/javascript' src='js/jquery2.1.4.min.js' charset='utf-8'></script>
+<script src="js/win8-mobile.js?version=0.17" type="text/javascript"></script>
+<script type='text/javascript' src='js/light7.js' charset='utf-8'></script>
+<script src="js/iconfont-symbol-container.js"></script>
+<script type='text/javascript' src='js/swiper.min.js' charset='utf-8'></script>
+<script src="js/plugins/i18n/jquery.i18n.properties.js"></script>
+<script src="js/plugins/i18n/language.js"></script>
 
-<script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-<!-- build:minjs js/win8-mobile.min.js -->
-<script src="js/win8-mobile.js" type="text/javascript"></script>
-<!-- endbuild -->
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
+
 </body>
 </html>
