--- a/firststage.html
+++ b/firststage.html
@@ -3,52 +3,45 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>赢8娱乐</title>
+    <title class="i18n" data-i18n-text='title'></title>
+    <meta id="i18n_pagename" content="index-common">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="icon" type="image/png" href="i/favicon.png">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
+    <link rel="icon" type="image/png" href="i/favicon.png"><link rel="stylesheet" href="css/light7.css">
     <link rel="stylesheet" href="css/font-awesome.css">
-    <!-- build:mincss css/win8-style-mobile.min.css -->
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_425853_3w2y99r15ihhbyb9.css">
     <link rel="stylesheet" href="css/mobile.css">
-    <!-- endbuild -->
-
-
-
+    <!--<link rel="stylesheet" href="css/animate.css">-->
 </head>
-
 <body>
 <div class="page-group">
     <div class="page page-current">
         <header class="bar bar-nav">
-            <a class="button button-link button-nav pull-left back" href="index.html" data-transition='slide-out'>                 <span class="iconfont icon-fanhui c-white"> </span></a>
-
-            <h1 class="title">优惠申请</h1>
+            <a class="button button-link button-nav pull-left back" href="user-center.html" data-transition='slide-out'>                 <span class="iconfont icon-fanhui c-white"> </span></a>
+            <!--<a class="icon icon-menu pull-left open-panel c-white" data-panel=".panel-left"></a>-->
+            <h1 class="title" data-i18n-text="PreferentialApplication">Preferential application</h1>
             <a href="javascript:void(0)" class="icon icon-service pull-right c-white"></a>
         </header>
 
+
+
         <div class="content">
-
-
             <!-- 列表 -->
             <div class="list-block">
                
                 <!-- 首存金额 -->
-                <div class="item-title row-tit">首存金额 <span class="c-red">*</span></div>
+                <div class="item-title row-tit"><span data-i18n-text="InitialDeposit">Initial deposit</span> <span class="c-red">*</span></div>
                 <div class="item-content bc-white">
                     <div class="item-inner">
                         <div class="item-input">
-                            <input type="number" placeholder="请输入首存金额" >
+                            <input type="number" placeholder="" >
                         </div>
                     </div>
                 </div>
 
 
                 <!-- 申请总比例 -->
-                <div class="item-title row-tit">申请总比例 <span class="c-red">*</span></div>
+                <div class="item-title row-tit"><span data-i18n-text="ApplicationProportion">Application proportion</span> <span class="c-red">*</span></div>
                 <div class="item-content bc-white">
                     <div class="item-inner">
                         <div class="item-input">
@@ -77,8 +70,8 @@
                     </div>
                 </div>
 
-                <!-- 首存金额 -->
-                <div class="item-title row-tit">可享受总优惠 <span class="c-red">*</span></div>
+                <!-- 可享受优惠 -->
+                <div class="item-title row-tit"><span data-i18n-text="BenefitsAvailable">Benefits available</span> <span class="c-red">*</span></div>
                 <div class="item-content bc-white">
                     <div class="item-inner">
                         <div class="item-input">
@@ -88,7 +81,7 @@
                 </div>
 
                 <!-- 享受周期 -->
-                <div class="item-title row-tit">享受周期 <span class="c-red">*</span></div>
+                <div class="item-title row-tit"><span data-i18n-text="CycleAvailable">Cycle available</span><span class="c-red">*</span></div>
                 <div class="item-content bc-white">
                     <div class="item-inner">
                         <div class="item-input">
@@ -98,7 +91,7 @@
                                 <div class="item-media"><i class="icon icon-form-checkbox"></i></div>
                                 <div class="item-inner">
                                     <div class="item-title-row">
-                                        8周
+                                        8 weeks
                                     </div>
                                 </div>
                             </label>
@@ -108,7 +101,7 @@
                                 <div class="item-media"><i class="icon icon-form-checkbox"></i></div>
                                 <div class="item-inner">
                                     <div class="item-title-row">
-                                        10周
+                                        10 weeks
                                     </div>
                                 </div>
                             </label>
@@ -118,7 +111,7 @@
                 </div>
 
                 <!-- 周期比例 -->
-                <div class="item-title row-tit">周期比例 <span class="c-red">*</span></div>
+                <div class="item-title row-tit"><span data-i18n-text="CycleProportion">Cycle proportion</span> <span class="c-red">*</span></div>
                 <div class="item-content bc-white">
                     <div class="item-inner">
                         <div class="item-input">
@@ -128,7 +121,7 @@
                 </div>
 
                 <!-- 第一期优惠金额 -->
-                <div class="item-title row-tit">第一期优惠金额 <span class="c-red">*</span></div>
+                <div class="item-title row-tit"><span data-i18n-text="PreferentialAmount"></span> <span class="c-red">*</span></div>
                 <div class="item-content bc-white">
                     <div class="item-inner">
                         <div class="item-input">
@@ -140,13 +133,12 @@
             </div>
 
             <div class="content-block">
-                <p><a href="#" class="button button-big button-round button-fill button-warning">提交 </a></p>
+                <p><a href="#" class="button button-big button-round button-fill button-warning" data-i18n-text="btnSubmit">submit </a></p>
             </div>
 
             <div class=" text-row" style="padding:0.5rem;font-size: 0.65rem;color: #666;">
                 <ol>
-                    <li>申请优惠条款。</li>
-                    <li>申请优惠条款申请优惠条款。</li>
+                    <li></li>
                 </ol>
             </div>
 
@@ -154,12 +146,12 @@
     </div>
 
 </div>
-
-<script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-<!-- build:minjs js/win8-mobile.min.js -->
-<script src="js/win8-mobile.js" type="text/javascript"></script>
-<!-- endbuild -->
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
+<script type='text/javascript' src='js/jquery2.1.4.min.js' charset='utf-8'></script>
+<script src="js/win8-mobile.js?version=0.17" type="text/javascript"></script>
+<script type='text/javascript' src='js/light7.js' charset='utf-8'></script>
+<script src="js/iconfont-symbol-container.js"></script>
+<script type='text/javascript' src='js/swiper.min.js' charset='utf-8'></script>
+<script src="js/plugins/i18n/jquery.i18n.properties.js"></script>
+<script src="js/plugins/i18n/language.js"></script>
 </body>
 </html>
