--- a/onlinepaystart-weixin.html
+++ b/onlinepaystart-weixin.html
@@ -215,18 +215,13 @@
     </div>
 
 </div>
-
-<script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='//at.alicdn.com/t/font_425853_o2rw1xwvh2.js' charset='utf-8'></script>
-
-<!-- build:minjs js/win8-mobile.min.js -->
-<script src="js/win8-mobile.js" type="text/javascript"></script>
-<!-- endbuild -->
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
-<!-- 20200111 在线支付 在线支付 js 新增 -->
-<script type='text/javascript' src='//at.alicdn.com/t/font_425853_fm5ptozgkzc.js' charset='utf-8'></script>
-<!-- 20200111 在线支付 js 新增 -->
+<script type='text/javascript' src='js/jquery2.1.4.min.js' charset='utf-8'></script>
+<script src="js/win8-mobile.js?version=0.17" type="text/javascript"></script>
+<script type='text/javascript' src='js/light7.js' charset='utf-8'></script>
+<script src="js/iconfont-symbol-container.js"></script>
+<script type='text/javascript' src='js/swiper.min.js' charset='utf-8'></script>
+<script src="js/plugins/i18n/jquery.i18n.properties.js"></script>
+<script src="js/plugins/i18n/language.js"></script>
 <script>
     $(function () {
         $('.quick-input a').on('click',function() {
