--- a/prefer.html
+++ b/prefer.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>赢8娱乐</title>
+    <title class="i18n" data-i18n-text='title'></title>
+    <meta id="i18n_pagename" content="index-common">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+    <!-- 自定义应用名称 -->
+    <meta name="application-name" content="Sea Slot">
+
+    <!-- Hiding Safari User Interface Components -->
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="icon" type="image/png" href="i/favicon.png">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
+    <!-- Changing the Status Bar Appearance -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+
+    <link rel="icon" type="image/png" href="i/favicon.png"><link rel="stylesheet" href="css/light7.css">
     <link rel="stylesheet" href="css/font-awesome.css">
-    <!-- build:mincss css/win8-style-mobile.min.css -->
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_425853_3w2y99r15ihhbyb9.css">
-    <link rel="stylesheet" href="css/mobile.css">
-    <!-- endbuild -->
+    <link rel="stylesheet" href="css/mobile.css?version=0.0.1">
 
 </head>
 <body>
@@ -23,20 +25,45 @@
         <header class="bar bar-nav">
             <a class="button button-link button-nav pull-left back" href="index.html" data-transition='slide-out'>                 <span class="iconfont icon-fanhui c-white"> </span></a>
            <!-- <a class="icon icon-menu pull-left open-panel c-white" data-panel=".panel-left"></a>-->
-            <h1 class="title">优惠专区</h1>
+            <h1 class="title">promo</h1>
             <a href="javascript:void(0)" class="icon icon-service pull-right c-white"></a>
         </header>
+
+        <!-- 登录前 -->
+        <div class="nav-before-login ">
+            <a href="reg.html" data-i18n-text="regFree">免费注册</a>
+            <a href="login.html" data-i18n-text="userLogin">玩家登录</a>
+        </div>
+        <!--/. 登录前 -->
+        <nav class="bar bar-tab">
+            <a class="tab-item external " href="index.html">
+                <span class="icon iconfont icon-shouye1"></span>
+                <span class="tab-label" data-i18n-text="navHome">home</span>
+            </a>
+            <a class="tab-item external active" href="prefer.html">
+                <span class="icon iconfont icon-youhui1"></span>
+                <span class="tab-label" data-i18n-text="navpromo">promo</span>
+            </a>
+            <a class="tab-item external" href="#">
+                <span class="icon iconfont icon-chat" ></span>
+                <span class="tab-label" data-i18n-text="navliveChat">live chat</span>
+            </a>
+            <a class="tab-item external " href="user-center.html">
+                <span class="icon iconfont icon-wodeA"></span>
+                <span class="tab-label" data-i18n-text="navProfile">profile</span>
+            </a>
+        </nav>
 
         <div class="content">
 
             <!-- tab button -->
             <div class="content-block" style="margin-bottom: 0;">
                 <div class="buttons-row">
-                    <a href="#new" class="tab-link active button">最新</a>
-                    <a href="#cunsong" class="tab-link button">存送</a>
-                    <a href="#kuiying" class="tab-link button">亏盈奖励</a>
-                    <a href="#yongjiu" class="tab-link button">永久优惠</a>
-                    <a href="#vip" class="tab-link button">VIP区</a>
+                    <a href="#new" class="tab-link active button" data-i18n-text="tabNew">New</a>
+                    <a href="#cunsong" class="tab-link button" data-i18n-text="tabDepositAndDelivery">Deposit</a>
+                    <a href="#kuiying" class="tab-link button" data-i18n-text="tabProfitAndLossReward">Reward</a>
+                    <a href="#yongjiu" class="tab-link button" data-i18n-text="tablongTerm">Long-term</a>
+                    <a href="#vip" class="tab-link button" data-i18n-text="tabVIPzone">VIP zone</a>
                 </div>
             </div>
             <!-- /. tab button -->
@@ -121,15 +148,12 @@
     </div>
     <!-- / 左侧栏 -->
 </div>
-
-<script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-<!-- build:minjs js/win8-mobile.min.js -->
-<script src="js/win8-mobile.js" type="text/javascript"></script>
-<!-- endbuild -->
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
-
-
-
+<script type='text/javascript' src='js/jquery2.1.4.min.js' charset='utf-8'></script>
+<script src="js/win8-mobile.js?version=0.17" type="text/javascript"></script>
+<script type='text/javascript' src='js/light7.js' charset='utf-8'></script>
+<script src="js/iconfont-symbol-container.js"></script>
+<script type='text/javascript' src='js/swiper.min.js' charset='utf-8'></script>
+<script src="js/plugins/i18n/jquery.i18n.properties.js"></script>
+<script src="js/plugins/i18n/language.js"></script>
 </body>
 </html>
