--- a/records.html
+++ b/records.html
@@ -8,9 +8,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="icon" type="image/png" href="i/favicon.png">
-    <link rel="stylesheet" href="css/sm.min.css">
-    <link rel="stylesheet" href="css/sm-extend.min.css">
+    <link rel="icon" type="image/png" href="i/favicon.png"><link rel="stylesheet" href="css/light7.css">
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/mobile.css">
     <!--<link rel="stylesheet" href="css/animate.css">-->
@@ -148,18 +146,11 @@
 </div>
 
 
-
-<script type='text/javascript' src='js/zepto.min.js' charset='utf-8'></script>
-
-<script src="js/win8-mobile.js?version=0.17" type="text/javascript"></script>
-
 <script type='text/javascript' src='js/jquery2.1.4.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='js/sm.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='js/sm-extend.min.js' charset='utf-8'></script>
+<script src="js/win8-mobile.js?version=0.17" type="text/javascript"></script>
+<script type='text/javascript' src='js/light7.js' charset='utf-8'></script>
 <script src="js/iconfont-symbol-container.js"></script>
-
 <script type='text/javascript' src='js/swiper.min.js' charset='utf-8'></script>
-
 <script src="js/plugins/i18n/jquery.i18n.properties.js"></script>
 <script src="js/plugins/i18n/language.js"></script>
 
@@ -168,14 +159,17 @@
     //起始日期
     let now1 = new Date;
     now1.setTime(now1.getTime() - 24 * 60 * 60 * 1000 * 4);//最后一个数字是默认起始天数
-    let startDay = `${now1.getFullYear()}-${now1.getMonth() + 1}-${now1.getDate()}`;
-    Zepto("#startTime").calendar({
+    let startDay = `${now1.getFullYear()}-${now1.getMonth() < 7 ?  "0"+(now1.getMonth() +1) : now1.getMonth() +1}-${now1.getDate()}`;
+    $("#startTime").calendar({
         value: [startDay]
     });
     //终止日期（今天）
-    let now = new Date;
-    let today = `${now.getFullYear()}-${now.getMonth() + 1}-${now.getDate()}`;
-    Zepto("#endTime").calendar({
+    let now = new Date,
+        yyyy = now.getFullYear(),
+        MM = now.getMonth() < 7 ?  "0"+(now.getMonth() +1) : now.getMonth() +1 ,
+        dd = now.getDate();
+    let today = yyyy + "-" + MM +  "-" + dd;
+    $("#endTime").calendar({
         value: [today]
     });
 
