--- a/state-404.html
+++ b/state-404.html
@@ -3,18 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>赢8娱乐</title>
+    <title class="i18n" data-i18n-text='title'></title>
+    <meta id="i18n_pagename" content="index-common">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="icon" type="image/png" href="i/favicon.png">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
+    <link rel="icon" type="image/png" href="i/favicon.png"><link rel="stylesheet" href="css/light7.css">
     <link rel="stylesheet" href="css/font-awesome.css">
-    <!-- build:mincss css/win8-style-mobile.min.css -->
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_425853_3w2y99r15ihhbyb9.css">
     <link rel="stylesheet" href="css/mobile.css">
-    <!-- endbuild -->
+    <!--<link rel="stylesheet" href="css/animate.css">-->
 </head>
 <body>
 <div class="page-group">
@@ -25,7 +22,7 @@
         <div class="content ">
                     <div class="stat-img-wrap">
                         <img src="images/404.png" alt="">
-                        <a class="button "  href="index.html">返回首页</a>
+                        <a class="button "  href="index.html">home</a>
                     </div>
 
 
@@ -34,14 +31,13 @@
 
 
 </div>
-
-<script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-<!-- build:minjs js/win8-mobile.min.js -->
-<script src="js/win8-mobile.js" type="text/javascript"></script>
-<!-- endbuild -->
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
-
+<script type='text/javascript' src='js/jquery2.1.4.min.js' charset='utf-8'></script>
+<script src="js/win8-mobile.js?version=0.17" type="text/javascript"></script>
+<script type='text/javascript' src='js/light7.js' charset='utf-8'></script>
+<script src="js/iconfont-symbol-container.js"></script>
+<script type='text/javascript' src='js/swiper.min.js' charset='utf-8'></script>
+<script src="js/plugins/i18n/jquery.i18n.properties.js"></script>
+<script src="js/plugins/i18n/language.js"></script>
 
 
 </body>
