--- a/state-error.html
+++ b/state-error.html
@@ -3,18 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>赢8娱乐</title>
+    <title class="i18n" data-i18n-text='title'></title>
+    <meta id="i18n_pagename" content="index-common">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="icon" type="image/png" href="i/favicon.png">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
+    <link rel="icon" type="image/png" href="i/favicon.png"><link rel="stylesheet" href="css/light7.css">
     <link rel="stylesheet" href="css/font-awesome.css">
-    <!-- build:mincss css/win8-style-mobile.min.css -->
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_425853_3w2y99r15ihhbyb9.css">
     <link rel="stylesheet" href="css/mobile.css">
-    <!-- endbuild -->
+    <!--<link rel="stylesheet" href="css/animate.css">-->
 </head>
 <body>
 <div class="page-group">
@@ -22,7 +19,7 @@
         <header class="bar bar-nav">
             <a class="button button-link button-nav pull-left back" href="index.html" data-transition='slide-out'>                 <span class="iconfont icon-fanhui c-white"> </span></a>
             <!--<a class="icon icon-menu pull-left open-panel c-white" data-panel=".panel-left"></a>-->
-            <h1 class="title">失败</h1>
+            <h1 class="title"></h1>
             <a href="javascript:void(0)" class="icon icon-service pull-right c-white"></a>
         </header>
 
@@ -30,22 +27,21 @@
         <div class="content ">
             <div class="state-wrap">
                     <i class="fa fa-close error"></i>
-                    <h1>是不是有什么错误，这是失败状态页面</h1>
-                    <a style="padding: 1rem" href="index.html">返回首页</a>
+                    <h1>some error happend.</h1>
+                    <a style="padding: 1rem" href="index.html">home</a>
             </div>
         </div><!-- /. content -->
     </div>
 
 
 </div>
-
-<script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-<!-- build:minjs js/win8-mobile.min.js -->
-<script src="js/win8-mobile.js" type="text/javascript"></script>
-<!-- endbuild -->
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
-
+<script type='text/javascript' src='js/jquery2.1.4.min.js' charset='utf-8'></script>
+<script src="js/win8-mobile.js?version=0.17" type="text/javascript"></script>
+<script type='text/javascript' src='js/light7.js' charset='utf-8'></script>
+<script src="js/iconfont-symbol-container.js"></script>
+<script type='text/javascript' src='js/swiper.min.js' charset='utf-8'></script>
+<script src="js/plugins/i18n/jquery.i18n.properties.js"></script>
+<script src="js/plugins/i18n/language.js"></script>
 
 
 </body>
