--- a/user-msg.html
+++ b/user-msg.html
@@ -3,30 +3,23 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>赢8娱乐</title>
+    <title class="i18n" data-i18n-text='title'></title>
+    <meta id="i18n_pagename" content="index-common">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="icon" type="image/png" href="i/favicon.png">
-    <link rel="stylesheet" href="http://g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
-    <link rel="stylesheet" href="http://g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
+    <link rel="icon" type="image/png" href="i/favicon.png"><link rel="stylesheet" href="css/light7.css">
     <link rel="stylesheet" href="css/font-awesome.css">
-    <!-- build:mincss css/win8-style-mobile.min.css -->
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_425853_3w2y99r15ihhbyb9.css">
     <link rel="stylesheet" href="css/mobile.css">
-    <!-- endbuild -->
-
-
+    <!--<link rel="stylesheet" href="css/animate.css">-->
 </head>
-
 <body>
 <div class="page-group">
     <div class="page page-current">
         <header class="bar bar-nav">
-            <a class="button button-link button-nav pull-left back" href="user-center.html" data-transition='slide-out'>
-                <span class="iconfont icon-fanhui c-white"> </span></a>
-
-            <h1 class="title">我的消息</h1>
+            <a class="button button-link button-nav pull-left back" href="user-center.html" data-transition='slide-out'>                 <span class="iconfont icon-fanhui c-white"> </span></a>
+            <!--<a class="icon icon-menu pull-left open-panel c-white" data-panel=".panel-left"></a>-->
+            <h1 class="title">message</h1>
             <a href="javascript:void(0)" class="icon icon-service pull-right c-white"></a>
         </header>
 
@@ -34,71 +27,54 @@
         <div class="content msg-content">
             <div class="content-block">
                 <p class="buttons-row">
-                    <a href="#" class="button button-round active">全部</a>
-                    <a href="#" class="button button-round ">未读</a>
-                    <a href="#" class="button button-round ">已读</a>
+                    <a href="#" class="button button-round active" data-i18n-text="tabAll">All</a>
+                    <a href="#" class="button button-round " data-i18n-text="tabUnread">Unread</a>
+                    <a href="#" class="button button-round " data-i18n-text="tabHaveRead">Have read</a>
                 </p>
             </div>
 
-            <div class="content-block-title"><i class="icon icon-clock"></i> 2017-05-15 15:22:20 <a class="btn-reply" href="javascript:void(0)">回复</a></div>
+            <div class="content-block-title"><i class="icon icon-clock"></i> 2017-05-15 15:22:20 <a class="btn-reply" href="javascript:void(0)" data-i18n-text="btnReply">Reply</a></div>
             <div class="card">
                 <div class="card-content">
-                    <div class="card-content-inner unread">恭喜您获得存200送100优惠资格，请在10月1日至10月3日时间内充值方可有效。</div>
+                    <div class="card-content-inner unread">Congratulations on your qualification to deposit 200 and send 100. Please recharge within the period from October 1 to October 3</div>
                 </div>
             </div>
-            <div class="content-block-title"><i class="icon icon-clock"></i> 2017-05-15 15:22:20 <a class="btn-reply" href="javascript:void(0)">回复</a></div>
+            <div class="content-block-title"><i class="icon icon-clock"></i> 2017-05-15 15:22:20 <a class="btn-reply" href="javascript:void(0)" data-i18n-text="btnReply">Reply</a></div>
             <div class="card">
                 <div class="card-content">
-                    <div class="card-content-inner unread">恭喜您获得存200送100优惠资格。</div>
+                    <div class="card-content-inner unread">Congratulations on your qualification to deposit 200 and send 100. Please recharge within the period from October 1 to October 3</div>
                 </div>
             </div>
-            <div class="content-block-title"><i class="icon icon-clock"></i> 2017-05-15 15:22:20 <a class="btn-reply" href="javascript:void(0)">回复</a></div>
+            <div class="content-block-title"><i class="icon icon-clock"></i> 2017-05-15 15:22:20 <a class="btn-reply" href="javascript:void(0)" data-i18n-text="btnReply">Reply</a></div>
             <div class="card">
                 <div class="card-content">
-                    <div class="card-content-inner">恭喜您获得存200送100优惠资格，请在10月1日至10月3日时间内充值方可有效。</div>
+                    <div class="card-content-inner">Congratulations on your qualification to deposit 200 and send 100. Please recharge within the period from October 1 to October 3</div>
                 </div>
             </div>
-            <div class="content-block-title"><i class="icon icon-clock"></i> 2017-05-15 15:22:20 <a class="btn-reply" href="javascript:void(0)">回复</a></div>
+            <div class="content-block-title"><i class="icon icon-clock"></i> 2017-05-15 15:22:20 <a class="btn-reply" href="javascript:void(0)" data-i18n-text="btnReply">Reply</a></div>
             <div class="card">
                 <div class="card-content">
-                    <div class="card-content-inner">恭喜您获得存200送100优惠资格恭喜您获得存200送100优惠资格恭喜您获得存200送100优惠资格恭喜您获得存200送100优惠资格恭喜您获得存200送100优惠资格，请在10月1日至10月3日时间内充值方可有效。</div>
+                    <div class="card-content-inner">Congratulations on your qualification to deposit 200 and send 100. Please recharge within the period from October 1 to October 3</div>
                 </div>
             </div>
-            <div class="content-block-title"><i class="icon icon-clock"></i> 2017-05-15 15:22:20 <a class="btn-reply" href="javascript:void(0)" style="background: #2196F3;">已回</a></div>
-            <div class="card">
-                <div class="card-content">
-                    <div class="card-content-inner">恭喜您获得存200送100优惠资格，请在10月1日至10月3日时间内充值方可有效。</div>
-                </div>
-            </div>
-            <div class="content-block-title"><i class="icon icon-clock"></i> 2017-05-15 15:22:20</div>
-            <div class="card">
-                <div class="card-content">
-                    <div class="card-content-inner">恭喜您获得存200送100优惠资格恭喜您获得存200送100优惠资格恭喜您获得存200送100优惠资格恭喜您获得存200送100优惠资格恭喜您获得存200送100优惠资格，请在10月1日至10月3日时间内充值方可有效。</div>
-                </div>
-            </div>
-            <div class="content-block-title"><i class="icon icon-clock"></i> 2017-05-15 15:22:20</div>
-            <div class="card">
-                <div class="card-content">
-                    <div class="card-content-inner">恭喜您获得存200送100优惠资格，请在10月1日至10月3日时间内充值方可有效。</div>
-                </div>
-            </div>
+
         </div><!-- /. content -->
     </div>
 
 </div>
-
-<script type='text/javascript' src='http://g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-<!-- build:minjs js/win8-mobile.min.js -->
-<script src="js/win8-mobile.js" type="text/javascript"></script>
-<!-- endbuild -->
-<script type='text/javascript' src='http://g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='http://g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
+<script type='text/javascript' src='js/jquery2.1.4.min.js' charset='utf-8'></script>
+<script src="js/win8-mobile.js?version=0.17" type="text/javascript"></script>
+<script type='text/javascript' src='js/light7.js' charset='utf-8'></script>
+<script src="js/iconfont-symbol-container.js"></script>
+<script type='text/javascript' src='js/swiper.min.js' charset='utf-8'></script>
+<script src="js/plugins/i18n/jquery.i18n.properties.js"></script>
+<script src="js/plugins/i18n/language.js"></script>
 <script>
-    //20200305 消息回复
+
     $(function(){
         $(document).on('click','.btn-reply', function () {
-            $.prompt('请输入回复内容', function (value) {
-                alert('你输入发回复内容是： "' + value );
+            $.prompt('reply', function (value) {
+                alert(value);
             });
         });
     })
