--- a/user_info.html
+++ b/user_info.html
@@ -8,9 +8,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="icon" type="image/png" href="i/favicon.png">
-    <link rel="stylesheet" href="css/sm.min.css">
-    <link rel="stylesheet" href="css/sm-extend.min.css">
+    <link rel="icon" type="image/png" href="i/favicon.png"><link rel="stylesheet" href="css/light7.css">
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/mobile.css">
     <!--<link rel="stylesheet" href="css/animate.css">-->
@@ -46,7 +44,7 @@
                             <div class="item-inner">
                                 <div class="item-title label" data-i18n-text="account"></div>
                                 <div class="item-input">
-                                    <input type="text" placeholder="qyun12323" disabled>
+                                    <input type="text" placeholder="" disabled value="qyun12323">
                                 </div>
                             </div>
                         </div>
@@ -94,18 +92,11 @@
     </div>
 
 </div>
-
-<script type='text/javascript' src='js/zepto.min.js' charset='utf-8'></script>
-
-<script src="js/win8-mobile.js?version=0.17" type="text/javascript"></script>
-
 <script type='text/javascript' src='js/jquery2.1.4.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='js/sm.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='js/sm-extend.min.js' charset='utf-8'></script>
+<script src="js/win8-mobile.js?version=0.17" type="text/javascript"></script>
+<script type='text/javascript' src='js/light7.js' charset='utf-8'></script>
 <script src="js/iconfont-symbol-container.js"></script>
-
 <script type='text/javascript' src='js/swiper.min.js' charset='utf-8'></script>
-
 <script src="js/plugins/i18n/jquery.i18n.properties.js"></script>
 <script src="js/plugins/i18n/language.js"></script>
 </body>
