--- a/withdraw.html
+++ b/withdraw.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>赢8娱乐</title>
+    <title class="i18n" data-i18n-text='title'></title>
+    <meta id="i18n_pagename" content="index-common">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="icon" type="image/png" href="i/favicon.png">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
-    <link rel="stylesheet" href="css/font-awesome.css">
-    <!-- build:mincss css/win8-style-mobile.min.css -->
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_425853_3w2y99r15ihhbyb9.css">
-    <link rel="stylesheet" href="css/mobile.css">
-    <!-- endbuild -->
+    <!-- 自定义应用名称 -->
+    <meta name="application-name" content="Sea Slot">
 
+    <!-- Hiding Safari User Interface Components -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- Changing the Status Bar Appearance -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+
+    <link rel="icon" type="image/png" href="i/favicon.png"><link rel="stylesheet" href="css/light7.css">
+    <link rel="stylesheet" href="css/font-awesome.css">
+    <link rel="stylesheet" href="css/mobile.css?version=0.0.1">
 
 
 </head>
@@ -26,16 +27,16 @@
         <header class="bar bar-nav">
             <a class="button button-link button-nav pull-left back" href="user-center.html" data-transition='slide-out'>                 <span class="iconfont icon-fanhui c-white"> </span></a>
 
-            <h1 class="title">提现</h1>
+            <h1 class="title">Withdrawal</h1>
             <a href="javascript:void(0)" class="icon icon-service pull-right c-white"></a>
         </header>
 
         <div class="content">
-            <div class="" style="font-size: .8rem;text-align: left;margin:.4rem .5rem 1rem;border-radius: .2rem;padding:0.3rem;word-break: break-all;color: #5b6bff;background-color: #f9fff6;border: 1px solid #a3a9be;font-weight: 900;">
+            <!--<div class="" style="font-size: .8rem;text-align: left;margin:.4rem .5rem 1rem;border-radius: .2rem;padding:0.3rem;word-break: break-all;color: #5b6bff;background-color: #f9fff6;border: 1px solid #a3a9be;font-weight: 900;">
                 诚信为本，承诺提款100%出款，如若违规【百倍返还】，恳请大家监督！ <br>CEO投诉邮箱：ceoyingba@gmail.com
-            </div>
+            </div>-->
             <div class="card ">
-                <div class="card-header ">当前余额</div>
+                <div class="card-header" data-i18n-text="balance">balance</div>
                 <div class="card-content">
                     <div class="card-content-inner account-balance"><i class="fa fa-yen"></i> <span>15000.50</span></div>
                 </div>
@@ -45,26 +46,22 @@
             <div class="list-block">
                
                 <!-- 提款金额 -->
-                <div class="item-title row-tit">提款金额 <span class="c-red">*</span></div>
-                <div class="item-content bc-white">
+                <div class="item-title row-tit"><span data-i18n-text="WithdrawalAmount">Withdrawal amount</span> <span class="c-red">*</span></div>
+                <div class="item-content ">
                     <div class="item-inner">
                         <div class="item-input">
-                            <input type="number" placeholder="请输入提款金额" >
+                            <input type="number" placeholder="Please enter the amount" >
                         </div>
                     </div>
                 </div>
 
 
                 <!-- 收款银行 -->
-                <div class="content-block" id="userinfo_tab">
-                    <p class="buttons-row">
-                        <a href="#tabBankCard" class="tab-link button active">银行卡收款</a>
-                        <a href="#tabzhifubao" class="tab-link button">支付宝收款</a>
-                    </p>
-                </div>
+
                 <div class="tabs">
                     <div id="tabBankCard" class="tab active">
-                        <div class="item-content bc-white">
+                        <div class="item-title row-tit"><span data-i18n-text="WithdrawalTo">Withdrawal to</span> <span class="c-red">*</span></div>
+                        <div class="item-content ">
                             <div class="item-inner">
                                 <div class="item-input">
 
@@ -73,7 +70,7 @@
                                         <div class="item-media"><i class="icon icon-form-checkbox"></i></div>
                                         <div class="item-inner">
                                             <div class="item-title-row">
-                                                招商银行 ************9180
+                                                <span style="color: #ffa670;">MAYBANK</span> <br>4844 5111 545454
                                             </div>
                                         </div>
                                     </label>
@@ -83,7 +80,7 @@
                                         <div class="item-media"><i class="icon icon-form-checkbox"></i></div>
                                         <div class="item-inner">
                                             <div class="item-title-row">
-                                                中国银行 ************650
+                                                <span  style="color: #ffa670;">PUBLIC BANK </span><br> 4844 5111 545454
                                             </div>
                                         </div>
                                     </label>
@@ -92,60 +89,29 @@
                             </div>
                         </div>
                     </div>
-                    <div id="tabzhifubao" class="tab ">
-                        <div class="item-content bc-white">
-                            <div class="item-inner">
-                                <div class="item-input">
 
-                                    <label class="label-checkbox item-content">
-                                        <input type="radio" name="my-radio" checked>
-                                        <div class="item-media"><i class="icon icon-form-checkbox"></i></div>
-                                        <div class="item-inner">
-                                            <div class="item-title-row">
-                                                支付宝 账号：hxb00111
-                                            </div>
-                                        </div>
-                                    </label>
-
-                                    <label class="label-checkbox item-content">
-                                        <input type="radio" name="my-radio">
-                                        <div class="item-media"><i class="icon icon-form-checkbox"></i></div>
-                                        <div class="item-inner">
-                                            <div class="item-title-row">
-                                                支付宝 账号：hxb002222
-                                            </div>
-                                        </div>
-                                    </label>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
 
 
 
                 <!-- 提款密码 -->
-                <div class="item-title row-tit">提款密码 <span class="c-red">*</span></div>
+                <div class="item-title row-tit"><span data-i18n-text="WithdrawalPassword">Withdrawal password</span> <span class="c-red">*</span></div>
                 <div class="item-content bc-white">
                     <div class="item-inner">
                         <div class="item-input">
-                            <input type="password" placeholder="请输入提款密码" >
+                            <input type="password" placeholder="Withdrawal password" >
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="content-block">
-                <p><a href="#" class="button button-big button-round button-fill button-warning">提交 </a></p>
+                <p><a href="#" class="button button-big button-round button-fill button-warning">Submit </a></p>
             </div>
 
             <div class=" text-row" style="padding:0.5rem;font-size: 0.65rem;color: #666;">
                 <ol>
-                    <li>提款手续费由用户承担。</li>
-                    <li>提现到账时间根据不同银行实际到账时间为准。</li>
-                    <li>提款银行卡必须与用户真实姓名一致。</li>
-                    <li>其他说明条款......</li>
+
                 </ol>
             </div>
 
@@ -153,12 +119,12 @@
     </div>
 
 </div>
-
-<script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-<!-- build:minjs js/win8-mobile.min.js -->
-<script src="js/win8-mobile.js" type="text/javascript"></script>
-<!-- endbuild -->
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
+<script type='text/javascript' src='js/jquery2.1.4.min.js' charset='utf-8'></script>
+<script src="js/win8-mobile.js?version=0.17" type="text/javascript"></script>
+<script type='text/javascript' src='js/light7.js' charset='utf-8'></script>
+<script src="js/iconfont-symbol-container.js"></script>
+<script type='text/javascript' src='js/swiper.min.js' charset='utf-8'></script>
+<script src="js/plugins/i18n/jquery.i18n.properties.js"></script>
+<script src="js/plugins/i18n/language.js"></script>
 </body>
 </html>
