--- a/game-sport.html
+++ b/game-sport.html
@@ -34,8 +34,8 @@
             <h1 class="title"><img src="images/header-logo.png" alt=""></h1>
             <div class="lan2">
                 <select id="language" >
-                    <option id="zhCN" value="zhCN" >中文简体</option>
-                    <option id="en" value="en" >English</option>
+                    <option id="zh_CN" value="zh_CN" >中文简体</option>
+                    <option id="en_US" value="en_US" >English</option>
                 </select>
             </div>
         </header>
