新增国际区号，货币选项

--- a/reg.html
+++ b/reg.html
@@ -60,7 +60,35 @@
                         <i class=" i-eye-open" style="margin-right: 10px;"></i>
                     </div>
                     <div class="row" style="overflow: inherit">
+                        <select class="global-roaming-picker">
+                            <option value="+86">+60</option>
+                            <option value="+86">+62</option>
+                            <option value="+86">+63</option>
+                            <option value="+86">+86</option>
+                            <option value="+86">+850</option>
+                            <option value="+86">+855</option>
+                            <option value="+86">+856</option>
+                        </select>
                         <input autocomplete="off" class="login-input input-phone" type="text" name="phone" maxlength="12" id="phone" placeholder="phone number"/>
+                    </div>
+                    <div class="row" style="overflow: inherit">
+                        <select class="login-input input-currency" id="currency">
+                            <option value="">---Choose Currency---</option>
+                            <option value="AUD">AUD</option>
+                            <option value="CNY">CNY</option>
+                            <option value="EUR">EUR</option>
+                            <option value="HKD">HKD</option>
+                            <option value="IDN">IDN</option>
+                            <option value="IDR">IDR</option>
+                            <option value="INR">INR</option>
+                            <option value="KRW">KRW</option>
+                            <option value="MMK">MMK</option>
+                            <option value="MYR">MYR</option>
+                            <option value="PHP">PHP</option>
+                            <option value="RUB">RUB</option>
+                            <option value="SGD">SGD</option>
+                            <option value="SGN">SGN</option>
+                        </select>
                     </div>
                     <div class="row" style="overflow: inherit">
                         <input autocomplete="off" class="login-input input-yqm" type="text" name="yqm"  id="yqm" placeholder="Invitation code, not required"/>
